# playarounds

./: Dockerfile  docker-compose.ci.yml  tmp.py
.github/workflows/: CI.yml
eisenhower_matrix/: manage.py  pyproject.toml
eisenhower_matrix/eisenhower_matrix/: asgi.py  settings.py  urls.py  wsgi.py
eisenhower_matrix/matrix/: forms.py  urls.py  views.py
eisenhower_matrix/matrix/templates/: base.html  login.html  register.html
eisenhower_matrix/matrix/tests/: __init__.py  test_forms.py
playaround_include_rust/: Cargo.toml  __init__.py  pyproject.toml
playaround_include_rust/src/: lib.rs
