[tool.poetry]
name = "eisenhower_matrix"
version = "0.1.0"
description = ""
authors = ["FelixTheC <felixeisenmenger@gmx.net>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.0"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
